--- a/core/pom.xml
+++ b/core/pom.xml
@@ -49,11 +49,11 @@
       <artifactId>gson</artifactId>
       <version>2.3.1</version>
     </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-all</artifactId>
-      <version>4.1.8.Final</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>io.netty</groupId>-->
+      <!--<artifactId>netty-all</artifactId>-->
+      <!--<version>4.1.8.Final</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
