--- a/integration/spark-common-test/pom.xml
+++ b/integration/spark-common-test/pom.xml
@@ -147,6 +147,8 @@
           </environmentVariables>
           <systemProperties>
             <java.awt.headless>true</java.awt.headless>
+            <spark.master.url>${spark.master.url}</spark.master.url>
+            <hdfs.url>${hdfs.url}</hdfs.url>
           </systemProperties>
         </configuration>
         <executions>
