--- a/pom.xml
+++ b/pom.xml
@@ -101,17 +101,18 @@
     <module>hadoop</module>
     <module>integration/spark-common</module>
     <module>integration/spark-common-test</module>
+    <module>integration/spark-common-cluster-test</module>
     <module>assembly</module>
-    <module>examples/flink</module>
-    <module>integration/hive</module>
-    <module>integration/presto</module>
+    <!--<module>examples/flink</module>-->
+    <!--<module>integration/hive</module>-->
+    <!--<module>integration/presto</module>-->
 
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <snappy.version>1.1.2.6</snappy.version>
-    <hadoop.version>2.2.0</hadoop.version>
+    <hadoop.version>2.3.0</hadoop.version>
     <hadoop.deps.scope>compile</hadoop.deps.scope>
     <spark.deps.scope>compile</spark.deps.scope>
     <scala.deps.scope>compile</scala.deps.scope>
@@ -320,7 +321,7 @@
       <id>hadoop-2.2.0</id>
       <!-- default -->
       <properties>
-        <hadoop.version>2.2.0</hadoop.version>
+        <hadoop.version>2.3.0</hadoop.version>
       </properties>
     </profile>
     <profile>
